ProdIND/ProdPrograms/force-app/main/default/objects/Webapp_Tab_Settings__mdt/Webapp_Tab_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Webapp Tab Settings</label>
    <pluralLabel>Webapp Tab Settings</pluralLabel>
</CustomObject>