ProdIND/ProdPrograms/force-app/main/default/objects/Webapp_Tab_Settings__mdt/fields/Sanction_Status__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Status__c</fullName>
    <label>Sanction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STP</fullName>
                <default>true</default>
                <label>STP</label>
            </value>
            <value>
                <fullName>Non-STP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>