ProdIND/ProdPrograms/force-app/main/default/objects/Webapp_Tab_Settings__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>