ProdIND/ProdPrograms/force-app/main/default/objects/Webapp_Tab_Settings__mdt/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>