ProdIND/ProdPrograms/force-app/main/default/objects/Webapp_Tab_Settings__mdt/fields/Tab_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Tab_Sequence__c</fullName>
    <label>Tab Sequence</label>
    <length>50</length>
    <type>Text</type>
</CustomField>