ProdIND/ProdPrograms/force-app/main/default/objects/Webapp_Tab_Settings__mdt/fields/Vehicle_Category__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Category__c</fullName>
    <label>Vehicle Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>