ProdIND/ProdPrograms/force-app/main/default/objects/Webapp_Tab_Settings__mdt/listViews/ViewApplMetadata.listView-meta.xml
<ListView>
    <fullName>ViewApplMetadata</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Stage__c</columns>
    <columns>Sub_Stage__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Vehicle_Category__c</columns>
    <columns>Sanction_Status__c</columns>
    <columns>Tab_Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>ViewApplMetadata</label>
</ListView>